@@ -106,6 +106,11 @@ Changes Since 0.7
   - Fix [ 1830389 ] Replace not breaking on getting system_messages from
     nested_parse
 
+* docutils/io.py:
+
+  - Do not close() sys.stdin, sys.stdout, or sys.stderr. Prevents
+    ``Exception ValueError: 'I/O operation on closed file.'`` with Python 3.
+
 Release 0.7 (2010-07-07)
 ========================
 
